trying to fix styling where dropdown fals behind image, also found bug on details page whioch breaks search filter

--- a/frontend/src/components/IndividualSpot/individualSpot.css
+++ b/frontend/src/components/IndividualSpot/individualSpot.css
@@ -1,35 +1,27 @@
-
 h1{
     margin: 0px;
 }
-
 h2{
     margin: 0px;
 }
 .spotWrapper{
-
     max-height: 100%;
     padding-left: 10%;
     padding-right: 10%;
-
 }
-
 .titleWrapper{
     padding-top: 1rem;
     font-family: 'Montserrat', sans-serif;
     height: 10%;
 }
-
 .spotTitle{
     font-weight: 500;
 }
-
 .handleUpdate{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 .updateButton{
     top: 0px;
 }
@@ -37,30 +29,24 @@ h2{
     display: flex;
     font-weight: 400;
     padding-top: 1rem;
-
 }
 .spotHeaderDetails div{
     padding-left: 10px;
-
 }
-
 .spotHeaderDetails a{
     color: black;
     padding-left: 10px;
 }
-
 .imageWrapper{
     margin-top: 10px;
     padding-top: 1rem;
-    /* background-color: green; */
     height: 50%;
     border-radius: 10%;
     display: flex;
-
 }
 .previewImageBlock{
     width: 100%;
-    height: 100%;
+    height: 20rem;
     display: flex;
     justify-items: center;
     align-content: center;
@@ -73,71 +59,47 @@ h2{
 }
 .imageBlock{
     overflow: hidden;
-
     width: 100%;
+    height: 20rem;
     display: flex;
     flex-wrap: wrap;
 }
 .imgContainer{
     width: 50%;
-    height: 50%;
+    height: 10rem;
+    position: relative;
 }
 .imageBlock img{
-    width: 100%;
-    height: 100%;
+    height: 97%;
+    width: 95%;
 }
-.firstImage{
-    padding-bottom: 5px;
-    padding-right: 5px;
+#first{
+    position: absolute;
+    top: 0;
     overflow: hidden;
+    z-index: 1;
 }
-.secondImage{
-    padding-left: 5px;
-    padding-bottom: 5px;
+#second{
+    position: absolute;
+    top: 0;
     overflow: hidden;
     border-radius: 0 10% 0 0;
 }
-.thirdImage{
+#third{
     overflow: hidden;
-    padding-top: 5px;
-    padding-right: 5px;
+    /* padding-top: 5px;
+    padding-right: 5px; */
+    bottom: 0;
+    position: absolute;
 }
-.fourthImage{
-    padding-left: 5px;
-    padding-top: 5px;
+#fourth{
+    /* padding-left: 5px;
+    padding-top: 5px; */
     overflow: hidden;
     border-radius: 0 0 10% 0;
+    position: absolute;
+    bottom: 0;
 }
-/* .firstinnerImage{
-    display: flex;
-}
-.firstinnerImage img{
-    display: block;
-    width: 100%;
-    height: auto;
-}
-.secondinnerImage img{
-
-    display: block;
-    width: 100%;
-    height: auto;
-}
-.thirdinnerImage{
-    display: flex;
-    overflow: hidden;
-}
-.thirdinnerImage img{
-
-    display: block;
-    width: 100%;
-    height: auto;
-}
-.fourthinnerImage img{
-
-    display: block;
-    width: 100%;
-    height: auto;
-} */
 .bodyWrapper{
     padding-top: 2rem;
     font-family: 'Montserrat', sans-serif;
